--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "adm-zip": "0.4.7",
     "chalk": "^1.1.3",
     "glob": "^7.0.3",
-    "jasmine": "2.4.1",
+    "jasmine": "https://github.com/jasmine/jasmine/tarball/master",
     "jasminewd2": "0.0.9",
     "optimist": "~0.6.0",
     "q": "1.4.1",
